--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,5 +3,5 @@ steps:
     entrypoint: 'mvn'
     args: ['package']
   - name: gcr.io/cloud-builders/docker
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/vehicle", "."]
-images: ["gcr.io/$PROJECT_ID/vehicle"]
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/gcp-vehicle", "."]
+images: ["gcr.io/$PROJECT_ID/gcp-vehicle"]
