--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-  - name: maven:3.6.0-jdk-12-slim
+  - name: maven:3.6.3-openjdk-14-slim
     entrypoint: 'mvn'
     args: ['package']
   - name: gcr.io/cloud-builders/docker
