--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,8 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>${project.basedir}/src/main/resources/contract.yaml</inputSpec>
+                            <!--<inputSpec>${project.basedir}/src/main/resources/contract.yaml</inputSpec>-->
+                            <inputSpec>${project.basedir}/src/main/resources/vehicle.yaml</inputSpec>
                             <generatorName>spring</generatorName>
                             <configOptions>
                                 <sourceFolder>src/gen/java/main</sourceFolder>
